# zfs

./: configure.ac
cmd/: zhack.c  ztest.c
cmd/zdb/: zdb.c
cmd/zfs/: zfs_main.c
cmd/zfs_ids_to_path/: zfs_ids_to_path.c
cmd/zfs_object_agent/: Makefile.am  tmp
cmd/zfs_object_agent/client/src/: main.rs
cmd/zfs_object_agent/src/: heartbeat.rs  object_access.rs  pool.rs  server.rs
cmd/zpool/: zpool_main.c
debian/: zfsutils-linux.install
include/: libzfs.h  libzfs_core.h
include/sys/: dmu.h  dsl_bookmark.h  metaslab.h  spa.h  spa_impl.h  vdev.h  vdev_impl.h  vdev_object_store.h  vdev_removal.h  zil.h
include/sys/fs/: zfs.h
lib/libzfs/: libzfs_pool.c  libzfs_status.c
lib/libzfs_core/: libzfs_core.abi  libzfs_core.c
lib/libzutil/os/linux/: zutil_setproctitle.c
man/man7/: zpoolconcepts.7
man/man8/: zfs.8
module/os/linux/zfs/: vdev_object_store.c
module/zfs/: dmu_recv.c  dmu_redact.c  dmu_send.c  dsl_bookmark.c  metaslab.c  spa.c  spa_misc.c  vdev.c  vdev_removal.c  zfs_ioctl.c  zil.c  zio.c  zio_inject.c
tests/runfiles/: common.run  linux.run
tests/zfs-tests/cmd/getholes/: .gitignore
tests/zfs-tests/cmd/libzfs_input_check/: libzfs_input_check.c
tests/zfs-tests/cmd/mkholes/: .gitignore
tests/zfs-tests/tests/: Makefile.am
tests/zfs-tests/tests/functional/cli_root/zpool_get/: zpool_get.cfg
tests/zfs-tests/tests/functional/shared_log/: shared_log.kshlib
